# serializer version: 1
# name: test_all_entities[abl_light_b_001][light.kitchen_light_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 9000,
      'min_color_temp_kelvin': 2000,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.kitchen_light_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': '7c16163e-c94e-482f-95f6-139ae0cd9d5e_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[abl_light_b_001][light.kitchen_light_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Kitchen Light 5',
      'hs_color': None,
      'max_color_temp_kelvin': 9000,
      'min_color_temp_kelvin': 2000,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.kitchen_light_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[centralite][light.dimmer_debian-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmer_debian',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': 'd0268a69-abfb-4c92-a646-61cec2e510ad_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[centralite][light.dimmer_debian-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Dimmer Debian',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmer_debian',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ks_hood_01001][light.range_hood_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.range_hood_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': 'fa5fca25-fa7a-1807-030a-2f72ee0f7bff_lamp',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_hood_01001][light.range_hood_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 127,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Range hood Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.range_hood_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[da_ks_microwave_0101x][light.microwave_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.microwave_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '2bad3237-4886-e699-1b90-4a51a3d55c8a_hood',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_microwave_0101x][light.microwave_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Microwave Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.microwave_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ks_oven_01061][light.oven_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.oven_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '9447959a-0dfa-6b27-d40d-650da525c53f_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_oven_01061][light.oven_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Oven Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.oven_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[da_ks_oven_0107x][light.kitchen_oven_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.kitchen_oven_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '199d7863-ad04-793d-176d-658f10062575_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_oven_0107x][light.kitchen_oven_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Kitchen oven Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.kitchen_oven_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ks_range_0101x][light.vulcan_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.vulcan_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '2c3cbaa0-1899-5ddc-7b58-9d657bd48f18_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_range_0101x][light.vulcan_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Vulcan Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.vulcan_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[da_ks_walloven_0107x][light.four_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.four_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '1c77a562-df00-7d6a-ca73-b67f6d4c4607_cavity-02',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_walloven_0107x][light.four_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Four Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.four_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ks_walloven_0107x][light.four_light_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.four_light_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '1c77a562-df00-7d6a-ca73-b67f6d4c4607_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_walloven_0107x][light.four_light_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Four Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.four_light_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[ge_in_wall_smart_dimmer][light.basement_exit_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.basement_exit_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': 'aaedaf28-2ae0-4c1d-b57e-87f6a420c298_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ge_in_wall_smart_dimmer][light.basement_exit_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Basement Exit Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.basement_exit_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[hue_color_temperature_bulb][light.bathroom_spot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 9000,
      'min_color_temp_kelvin': 2000,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.bathroom_spot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': '440063de-a200-40b5-8a6b-f3399eaa0370_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[hue_color_temperature_bulb][light.bathroom_spot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 178,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp_kelvin': 3000,
      'friendly_name': 'Bathroom spot',
      'hs_color': tuple(
        27.825,
        56.895,
      ),
      'max_color_temp_kelvin': 9000,
      'min_color_temp_kelvin': 2000,
      'rgb_color': tuple(
        255,
        177,
        110,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
      'xy_color': tuple(
        0.496,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.bathroom_spot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[hue_rgbw_color_bulb][light.standing_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 9000,
      'min_color_temp_kelvin': 2000,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.standing_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': 'cb958955-b015-498c-9e62-fc0c51abd054_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[hue_rgbw_color_bulb][light.standing_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Standing light',
      'hs_color': None,
      'max_color_temp_kelvin': 9000,
      'min_color_temp_kelvin': 2000,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.standing_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[ikea_plug_powermeter][light.ikea_plug_powermeter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ikea_plug_powermeter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': '9be7ea22-975e-41f0-bc3c-e811a6fb1289_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ikea_plug_powermeter][light.ikea_plug_powermeter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 102,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'IKEA Plug Powermeter',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.ikea_plug_powermeter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
